@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 0.11.0
 
 Author(s) : Juergen Knoedlseder
 
-2 June 2015
+5 June 2015
 
 
 1. Introduction
@@ -13,7 +13,9 @@ made since the last release of GammaLib.
 
 2. Public interface modifications
 ---------------------------------
-None
+The GOptimizerLM logger constructor now takes a pointer to a logger instead of
+a reference. This allows setting of a NULL pointer, disabling the logging of the
+optimizer.
 
 
 3. Configuration
@@ -70,6 +72,9 @@ likelihood function is smooth.
 The gradient computation has been corrected. Instead of multiplying the gradient
 factor with the scale factor we have to divide the gradient factor by the scale
 factor.
+
+An logger() method has been added to GOptimizerLM to set the logger for an
+optimizer (before, a logger could only be set during construction).
 
 
 12. Sky module
